Fix overflow issue for footer links on MAC default resolution

--- a/web/src/custom.css
+++ b/web/src/custom.css
@@ -20,6 +20,7 @@
 }
 .ak-login-container {
     margin-left: 30px;
+    padding-top: 0;
 }
 
 .ak-login-container::before {
@@ -116,13 +117,25 @@ a[href^="https://goauthentik.io?utm_source=authentik&utm_medium=flow"] {display:
     padding-bottom: 2rem;
 }
 .pf-c-login__main-header.pf-c-brand.ak-brand{
-    padding-top: 2rem;
+    padding: 1rem;
+}
+.pf-c-login__main-header{
+    padding: 1rem;
+    text-align: center;
 }
 .ak-login-container{
     /*overflow-scrolling: auto;*/
     padding-top: 1rem;
     overflow: auto;
     height: fit-content;
+}
+
+.pf-c-login__main-body, .pf-c-login__main-footer-links{
+    padding: 0 2rem 1rem 2rem;
+
+}
+.pf-c-login__main-footer-links{
+    padding: 0 2rem 0.5rem 2rem;
 }
 
 .pf-c-drawer__body {
@@ -155,4 +168,13 @@ a[href^="https://goauthentik.io?utm_source=authentik&utm_medium=flow"] {display:
 .pf-c-login__footer ul.pf-c-list.pf-m-inline{
     padding-symotion-sleft: 1rem;
     padding-right: 1rem;
+    padding: 0 2rem 1rem 2rem
+}
+
+.pf-c-form__group.pf-m-action {
+    margin-top: 0;
+}
+
+body{
+    font-size: 12px!important;
 }
